<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollHorizontally="false"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/temperature_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:gravity="center"
            android:minLines="2"
            android:text="@string/temperature" />

        <TextView
            android:id="@+id/temperature_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="000"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/timeleft_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:gravity="center"
            android:minLines="2"
            android:text="@string/timeleft" />

        <TextView
            android:id="@+id/timeleft_value"
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="00"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:gravity="center"
            android:minLines="2"
            android:text="@string/time" />

        <TextView
            android:id="@+id/time_value"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="00:00"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/programStep_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:gravity="start"
            android:text="@string/programStep"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/programStep_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:gravity="start"
            android:text="0"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/programSelector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:enabled="false"
            android:gravity="start"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/heater_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:gravity="start"
            android:text="@string/heater"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/heater_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:gravity="start"
            android:text="Off"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:text="@string/start"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/stabMode_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:gravity="start"
            android:text="@string/stabMode"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/stabMode_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="5dp"
            android:gravity="start"
            android:text="Off"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:text="@string/stop"
            android:textSize="20sp" />

        <com.androidplot.xy.XYPlot
            android:id="@+id/plot"
            style="@style/APDefacto.Light"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_row="5"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnSpan="4"
            app:domainTitle="@string/time"
            app:lineLabelInsetBottom="5dp"
            app:lineLabelRotationBottom="0"
            app:lineLabels="left|bottom"
            app:rangeTitle="@string/temperature"
            app:title="@string/ovenTemperature" />

    </GridLayout>
</android.support.constraint.ConstraintLayout>